@@ -11,7 +11,3 @@ Currently, only numbers are reported
 ## Limit number of threads running simultaneously ##
 
 If we have dozens, or hundreds of images to clone, we should not start as many threads in parallel. Instead, we should limit the number of threads, adding new threads when old threads complete and join.
-
-## Docker functions to be optimized ##
-
-These functions reuse the same code. This code should be moved to standalone function.
